Fixed bug #37671 (MySQLi extension fails to recognize BIT column).